Tue Aug  6 12:23:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_realloc): Use VALGRIND_MAKE_MEM_UNDEFINED to
	  declare undefined memory area.
	  (bignew_1): Ditto.

	* internal.h (VALGRIND_MAKE_MEM_DEFINED): Moved from gc.c
	  (VALGRIND_MAKE_MEM_UNDEFINED): Ditto.

Tue Aug  6 01:40:37 2013  Zachary Scott  <e@zzak.io>

	* process.c: [DOC] Document caveats of command form of Process.spawn
	  with regard to the shell and OS. Patched by Steve Klabnik [Bug #8550]

Tue Aug  6 01:28:35 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/0.9.rb: [DOC] Typo in example [Bug #8732]

Tue Aug  6 01:22:37 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/2.0.rb: [DOC] Document RSS::Rss by Steve Klabnik #8740
	* lib/rss/atom.rb: [DOC] Typo in rdoc by Steve Klabnik

Mon Aug  5 23:47:59 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Rename local variables.

Mon Aug  5 22:23:59 2013  Zachary Scott  <e@zzak.io>

	* vm_trace.c: [DOC] Fix TracePoint return values in examples
	  Based on a patch by @sho-h [Fixes GH-373]
	  https://github.com/ruby/ruby/pull/373

Mon Aug  5 17:38:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_write_console): use MultiByteToWideChar() for
	  the last step of conversion to WCHAR, to get rid of warnings from
	  rb_enc_find() in miniruby.  [ruby-dev:47584] [Bug #8733]

	* win32/win32.c (wstr_to_mbstr, mbstr_to_wstr): fix wrong trimming.
	  WideCharToMultiByte() and MultiByteToWideChar() do not count
	  NUL-terminator in the size for conversion result, unless the input
	  length is -1.

Mon Aug  5 11:51:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* include/ruby/encoding.h: document which user flags are used by
	  ENCODING_MASK for better greppability

Mon Aug  5 10:01:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* object.c (rb_class_inherited_p): allow iclasses to be tested for
	  inheritance. [Bug #8686] [ruby-core:56174]

	* test/ruby/test_method.rb: add test
